# merchant-usernames

./: .gitignore  INTRODUCTION.md  README.md  package-lock.json  package.json
dns-api/: .env.example  tsconfig.json
dns-api/src/config/: index.ts
dns-api/src/services/: queue.ts
dns-api/src/validation/: schemas.ts
greenlight-backend/: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  test_endpoints.sh
greenlight-backend/migrations/: 001_create_users_table.sql
greenlight-backend/src/: config.rs  error.rs  main.rs
greenlight-backend/src/handlers/: auth.rs  mod.rs  node.rs  websocket.rs
greenlight-backend/src/middleware/: auth.rs
greenlight-backend/src/models/: user.rs
greenlight-backend/src/services/: crypto.rs  greenlight.rs  jwt.rs  mod.rs
greenlight-backend/test_results/: invalid_jwt.json  login.json  node_register.json  register.json  unauthorized.json  websocket_test.html  wrong_password.json
src/: server.ts  worker.ts
src/middleware/: auth.ts  validation.ts
src/routes/: api.ts
src/services/: cloudflare.ts
src/types/: index.ts
src/utils/: logger.ts
