[package]
name = "greenlight-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Greenlight client
gl-client = { git = "https://github.com/Blockstream/greenlight.git" }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography & Security
argon2 = "0.5"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
bitcoin = { version = "0.31", features = ["std", "secp-recovery"] }
bip39 = "2.0"

# JWT
jsonwebtoken = "9.2"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.22"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.10"

# WebSocket
futures-util = "0.3"

[dependencies.sqlx-cli]
version = "0.7"
optional = true

[[bin]]
name = "greenlight-backend"
path = "src/main.rs"
